# rinha-de-backend

./: .gitignore  Cargo.toml  Dockerfile  README.md  compose-cached.yml  compose-mongo.yml  compose-postgres.yml  docker-compose.yml  nginx.conf
.sqlx/: query-3280ffeb59d88d3dfde95ff79ee1f42af3bb73b8efc8c6d675d7c94d9666f10b.json  query-611e90a42939c996c6bc4fd8f79221153c8ac1301b9652e5a5e3071916588fca.json  query-accdc835a52307042b7c13bcb596fc935cf381e2e4e1dac8f4fbb3d49a1eb1ec.json  query-c77c0e6bf055e0f37a5e9949c9501ea28b0bf4972313f261b40685308814cade.json
migrations/: 20240228013933_initial_migration.down.sql  20240228013933_initial_migration.up.sql
src/: database.rs  error.rs  main.rs  router.rs  validator.rs
src/database/: cache.rs  models.rs  mongo.rs  postgres.rs
