[package]
name = "rinha-de-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
validator = { version = "0.16.1", features = ["derive"] }
thiserror = "1.0.57"
chrono = { version = "0.4.34", features = ["serde"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres"] }
